syntax = "proto3";

package com.feige.im.pojo.proto;

option java_outer_classname = "DefaultMsg";

message Auth {
  /**
  登录IP
   */
  string ip = 1;

  /**
  设备ID
   */
  string deviceId = 2;

  /**
  设备名字
   */
  string deviceName = 3;

  /**
  APP版本
   */
  string version = 4;

  /**
  系统版本
   */
  string osVersion = 5;

  /**
  语言
   */
  string language = 6;

  /**
  登录token，没有token时可用作userId
   */
  string token = 7;

  /**
  平台名
   */
  string platform = 8;

  /**
  地址
   */
  string address = 9;

}



message Forced {
  /**
  账号登录的IP
   */
  string ip = 1;
  /**
  账号登录的地址
   */
  string address = 2;

  /**
  提示内容
   */
  string content = 3;
  /**
  设备名
   */
  string deviceName = 4;

  /**
  时间
   */
  string timestamp = 5;
}



message Msg{
  /**
     *消息ID
     */
  string id = 1;
  /**
     *好友关系ID
     */
  string friendRelationId = 2;
  /**
     *好友关系ID
     */
  string senderId = 3;
  /**
     *消息接收者ID
     */
  string receiverId = 4;
  /**
     *消息内容
     */
  string content = 5;
  /**
     *消息格式 txt/json/html/...
     */
  int32 format = 6;
  /**
     *消息类型 图片/语音/...
     */
  uint32 msgType = 7;
  /**
     *时间
     */
  string gmtCreate = 8;
  /**
     *消息状态
     */
  uint32 status = 9;
  /**
     *额外消息
     */
  string extra = 10;
}
/**
传输消息
 */
message TransportMsg {
  /*
  消息类型
   */
  MsgType type = 1;
  /*
  消息
   */
  Msg msg = 2;

  enum MsgType {
    /*
    私聊
     */
    PRIVATE = 0;
    /*
    群聊
     */
    GROUP = 1;
    /*
    其他
     */
    OTHER = 2;
  }
}

